--- a/DALLE2_Prior_+_MSE_VQGAN.ipynb
+++ b/DALLE2_Prior_+_MSE_VQGAN.ipynb
@@ -772,6 +772,7 @@
         "!pip install ftfy regex tqdm omegaconf pytorch-lightning\n",
         "!pip install kornia\n",
         "!pip install einops\n",
+        "!pip install scikit-learn-extra\n",
         "\n",
         "# dalle2 prior from NasirKhalid24\n",
         "!git clone https://github.com/lucidrains/DALLE2-pytorch.git\n",
@@ -1053,6 +1054,7 @@
         "\n",
         "sys.path.append('./taming-transformers')\n",
         "\n",
+        "from sklearn_extra.cluster import KMedoids\n",
         "from IPython import display\n",
         "from omegaconf import OmegaConf\n",
         "from PIL import Image\n",
@@ -1211,6 +1213,16 @@
         "    return embed_1\n",
         "    \n",
         "  return embed_2\n",
+        "\n",
+        "def select_medoid(cond_embed, n_samples):\n",
+        "    cond_batch = torch.cat([cond_embed for _ in range(n_samples) ])\n",
+        "    prior_embeds = prior.p_sample_loop((n_samples,512), text_cond=dict(text_embed=cond_batch))\n",
+        "    priors_normed = F.normalize(prior_embeds)\n",
+        "    other = priors_normed\n",
+        "    sims = priors_normed @ other.T\n",
+        "    i = sims.mean(dim=0).argmax().item()\n",
+        "    best = prior_embeds[i,:].unsqueeze(0)\n",
+        "    return best\n",
         "\n",
         "def parse_prompt(prompt):\n",
         "    vals = prompt.rsplit(':', 2)\n",
@@ -1419,6 +1431,13 @@
         "# use_prior = False #@param {type: \"boolean\"}\n",
         "seed = 1 #@param [\"256\", \"512\"] {type:\"raw\", allow-input: true}\n",
         "prior_influence = 0.2 #@param {type:\"slider\", min:0, max:1, step:0.01}\n",
+        "\n",
+        "#@markdown ----\n",
+        "# @markdown \n",
+        "\n",
+        "select_best_method = 'sim_to_target' # @param ['prior_medoid', 'sim_to_target']\n",
+        "n_medoid_samples =  25# @param {type: 'integer'}\n",
+        "\n",
         "#@markdown prior_influence: controlls how much to weight the prior embedding (left=prior has no influnce | right=prior has 100% influence) \n",
         "#@markdown \n",
         "#@markdown ----\n",
@@ -1437,7 +1456,8 @@
         "    \"mse_decay_rate\": mse_decay_rate,\n",
         "    \"mse_epochs\":mse_epoches,\n",
         "    \"max_iterations\": max_iterations,\n",
-        "    \"seed\": seed\n",
+        "    \"seed\": seed,\n",
+        "    \"select_best_method\": select_best_method, \n",
         "})\n",
         "\n",
         "priors = [\"without\", \"with\", \"both\"]\n",
@@ -1490,6 +1510,10 @@
         "\n",
         "    # end itteration\n",
         "    max_itter = max_iterations,\n",
+        "\n",
+        "    # prior sampling\n",
+        "    select_best_method = select_best_method,\n",
+        "    n_medoid_samples = n_medoid_samples,\n",
         ")\n",
         "\n",
         "mse_decay = 0\n",
@@ -1635,24 +1659,37 @@
         "      embed = torch.empty([1, perceptor.visual.output_dim]).normal_(generator=gen)\n",
         "      pMs.append(Prompt(embed, weight).to(device))\n",
         "\n",
-        "  for prompt in args.prompts:\n",
-        "      txt, weight, stop = parse_prompt(prompt)\n",
-        "      embed = perceptor.encode_text(clip.tokenize(txt).to(device)).float()\n",
-        "      if use_prior == \"with\":\n",
-        "        text_embed = embed\n",
-        "        pred_embed_1 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=embed))\n",
-        "        pred_embed_2 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=embed))\n",
-        "        embed = select_best(text_embed, pred_embed_1, pred_embed_2)\n",
-        "      elif use_prior == \"both\":\n",
-        "        text_embed = embed\n",
-        "        pred_embed_1 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=embed))\n",
-        "        pred_embed_2 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=embed))\n",
-        "        pred_embed = select_best(text_embed, pred_embed_1, pred_embed_2)\n",
-        "        weighted_pred = prior_influence*pred_embed\n",
-        "        weighted_text = (1-prior_influence)*embed\n",
-        "        embed = weighted_pred+weighted_text\n",
+        "  if args.select_best_method == 'sim_to_target':\n",
+        "    for prompt in args.prompts:\n",
+        "        txt, weight, stop = parse_prompt(prompt)\n",
+        "        embed = perceptor.encode_text(clip.tokenize(txt).to(device)).float()\n",
+        "        prior_embed = embed\n",
+        "        if use_prior == \"with\":\n",
+        "          pred_embed_1 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=prior_embed))\n",
+        "          pred_embed_2 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=prior_embed))\n",
+        "          embed = select_best(prior_embed, pred_embed_1, pred_embed_2)\n",
+        "        elif use_prior == \"both\":\n",
+        "          pred_embed_1 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=prior_embed))\n",
+        "          pred_embed_2 = prior.p_sample_loop((1,512), text_cond=dict(text_embed=prior_embed))\n",
+        "          pred_embed = select_best(prior_embed, pred_embed_1, pred_embed_2)\n",
         "\n",
-        "      pMs.append(Prompt(embed, weight, stop).to(device))\n",
+        "          weighted_pred = prior_influence*pred_embed\n",
+        "          weighted_text = (1-prior_influence)*embed\n",
+        "          embed = weighted_pred+weighted_text\n",
+        "\n",
+        "        pMs.append(Prompt(embed, weight, stop).to(device))\n",
+        "  elif args.select_best_method == 'prior_medoid':\n",
+        "    print(\"using medoid prior estimation\")\n",
+        "    for prompt in args.prompts:\n",
+        "      txt, weight, stop = parse_prompt(prompt)\n",
+        "      cond_embed = perceptor.encode_text(clip.tokenize(txt).to(device)).float()\n",
+        "      if use_prior in ('with','both'):\n",
+        "        prior_embed = select_medoid(cond_embed, args.n_medoid_samples)\n",
+        "        embed = (prior_influence * prior_embed) + ((1-prior_influence) * cond_embed)\n",
+        "      else:\n",
+        "        embed = cond_embed\n",
+        "    pMs.append(Prompt(embed, weight, stop).to(device))\n",
+        "\n",
         "\n",
         "\n",
         "  def synth(z, quantize=True):\n",
