fixed issue with lerping condition

--- a/DALLE2_Prior_+_MSE_VQGAN.ipynb
+++ b/DALLE2_Prior_+_MSE_VQGAN.ipynb
@@ -1685,7 +1685,11 @@
         "      cond_embed = perceptor.encode_text(clip.tokenize(txt).to(device)).float()\n",
         "      if use_prior in ('with','both'):\n",
         "        prior_embed = select_medoid(cond_embed, args.n_medoid_samples)\n",
-        "        embed = (prior_influence * prior_embed) + ((1-prior_influence) * cond_embed)\n",
+        "        if use_prior == 'both':\n",
+        "        \n",
+        "          embed = (prior_influence * prior_embed) + ((1-prior_influence) * cond_embed)\n",
+        "        else:\n",
+        "          embed = prior_embed\n",
         "      else:\n",
         "        embed = cond_embed\n",
         "    pMs.append(Prompt(embed, weight, stop).to(device))\n",
