--- a/DALLE2_Prior_+_MSE_VQGAN.ipynb
+++ b/DALLE2_Prior_+_MSE_VQGAN.ipynb
@@ -1767,7 +1767,7 @@
         "      opt.zero_grad()\n",
         "      lossAll = ascend_txt()\n",
         "\n",
-        "      if i % args.display_freq == 0:\n",
+        "      if (i+1) % args.display_freq == 0:\n",
         "          checkin(i, lossAll)\n",
         "      \n",
         "      loss = sum(lossAll)\n",
